Allowing mvn to run the tests.