@@ -97,11 +97,6 @@
             <artifactId>thymeleaf-extras-springsecurity5</artifactId>
             <version>3.1.1.RELEASE</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-test</artifactId>
-            <scope>test</scope>
-        </dependency>
 
 
         <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
@@ -207,6 +202,14 @@
                 <configuration>
                     <mainClass>org.smartjobs.SmartJobs</mainClass>
                     <layout>JAR</layout>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
         </plugins>
